--- a/content/blog/작업파일.md
+++ b/content/blog/작업파일.md
@@ -1,5 +1,5 @@
 ﻿+++
-title = "[세미나] 김준교수님"
+title = "[세미나] 김준 교수님"
 date = "2026-02-27T01:00:00+09:00"
 categories = ["세미나"]
 banner = "img/placeholder.png"
@@ -13,33 +13,14 @@ icon = "microphone"
 #### 2026년 3월 3일 (화) 17:00 
 #### 과학관 111호(ARC).
 
-#### 김준교수님 (연세대학교)
+#### 김준 교수님 (연세대학교)
 
 <br>
 <br>
 
 <img src="/files/세미나포스터_김준교수님.png" width="95%">
+[초록 다운로드링크] ("files/1.초록_김준교수님.docx")
 
 
-
-<br>우주에서 보는 하늘과 바람과 불과 흙: 위성 리모트센싱 연구의 여정과 전망
-
-김 준 (연세대학교 대기과학과 교수, 이윤재 펠로우 교원)
-
-오늘날 인류가 직면한 대기환경 문제는 오존층 파괴, 대기오염, 그리고 기후변화이다.
-이들 문제는 국경을 초월하며 전지구적 규모에서 상호작용한다. 이러한 광역 대기환경을
-이해하고 진단하기 위해 지상 관측망과 더불어 인공위성을 활용한 대기 조성의 리모트센싱
-기술은 비약적으로 발전해 왔다.
-위성 리모트센싱은 대기 구성 성분의 분광학적 특성을 활용하여 그 농도와 물리·화학적
-특성을 산출하는 기술로, 대기 복사전달과 역산출 이론을 기반으로 구현된다. 위성은 지구
-전역을 균일한 방식으로 장기간 관측할 수 있다는 점에서 대기환경 연구에 독보적인 도구가
-되었다. 이러한 위성의 대기조성 관측 자료는 NASA의 Aerosol Robotic Network (AERONET),
-Pandora Global Network (PGN) 와 같은 지상 관측망, 그리고 KORUS-AQ, ASIA-AQ와 같은
-항공·해상 관측을 포함한 대규모 필드 캠페인을 통해 검증되고 발전해 왔다. 육지와 바다,
-국경을 넘어선 위성관측은 우리에게 지구 대기의 거대한 흐름과 변화를 파악할 수 있는
-새로운 눈을 제공한다.
-과학은 한 명의 연구자나, 하나의 장비, 한 국가의 노력만으로 완성되지 않으며, 국제적
-협력과 세대 간 축적 위에서 발전해 왔다. 본 발표에서는 위성 리모트센싱 연구의 발전 과정과
-함께, 우주에서 바라본 지구 대기환경의 변화와 그 과학적 의미를 돌아보고, 앞으로의 연구
-방향과 과제를 함께 모색하고자 한다.<br>
+<br><br>
 
