--- a/content/blog/작업파일.md
+++ b/content/blog/작업파일.md
@@ -11,7 +11,7 @@ icon = "microphone"
 <br>
 
 #### 2026년 3월 3일 (화) 17:00 
-#### 과학관 111호(ARC).
+#### 과학관 111호(ARC)
 
 #### 김준 교수님 (연세대학교)
 
@@ -19,7 +19,7 @@ icon = "microphone"
 <br>
 
 <img src="/files/세미나포스터_김준교수님.png" width="95%">
-[초록 다운로드링크] ("files/1.초록_김준교수님.docx")
+[초록 다운로드링크]("files/1.초록_김준교수님.docx")
 
 
 <br><br>
