--- a/content/blog/작업파일.md
+++ b/content/blog/작업파일.md
@@ -19,7 +19,7 @@ icon = "microphone"
 <br>
 
 <img src="/files/세미나포스터_김준교수님.png" width="95%">
-[초록 다운로드링크](files/1.초록_김준교수님.docx)
+<a href="/files/1.초록_김준교수님.docx" download>초록다운로드</a>
 
 
 <br><br>
